data/derived/comb/progs/unify/prog7146.ml.out
Characters 169-174:
  if (1 = 2) then seen' := h :: seen' ;
                                ^^^^^
Error: This expression has type 'a list ref
       but an expression was expected of type 'a list
